--- a/views/CheckoutPage.ejs
+++ b/views/CheckoutPage.ejs
@@ -83,7 +83,7 @@
               <div class="col-md-6 col-lg-6 order-md-2 icon-box">
                 <h4  style="text-align: center; color: #3C4C69;" style="text-align: center;">Pagamento com cartão</h4><br>
 
-                <form action="/pago" method="POST">
+                <form action="/PaymentMade" method="POST">
 
                   <div class="row">
                     <div class="col-md-12 mb-3">
