--- a/views/HireProfessionalPage.ejs
+++ b/views/HireProfessionalPage.ejs
@@ -49,7 +49,7 @@
 
                                         <div style="display: none;" class="container divend">
 
-                                            <form action="/salvarendereco" method="POST" >
+                                            <form action="/SaveAddress" method="POST" >
                                                 <br>
                                              
 
@@ -90,7 +90,7 @@
                             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
 
                                
-                                <form action="/Solicitar" method="post" role="form" class="php-email-form">
+                                <form action="/RequestService" method="post" role="form" class="php-email-form">
 
                                     
 
