--- a/views/HomePage.ejs
+++ b/views/HomePage.ejs
@@ -17,7 +17,7 @@
           <h1>Cuide de quem sempre cuidou de você</h1>
           <h2>Profissionais a um toque de distancia</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="/contrate" class="btn-get-started scrollto">Cuidadosos</a>
+            <a href="/CuidadosoListing" class="btn-get-started scrollto">Cuidadosos</a>
             <a href="https://www.youtube.com/watch?v=dTwBkcCy66A" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Assitir Video</span></a>
           </div>
         </div>
@@ -135,7 +135,7 @@
             <p>Cabelos brancos são uma coroa que mostra a experiência e a sabedoria de uma existência carregadade de vivências</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="/contrate">Contrate-nos</a>
+            <a class="cta-btn align-middle" href="/CuidadosoListing">Contrate-nos</a>
           </div>
         </div>
 
@@ -171,7 +171,7 @@
              
 Profissionais ao alcance de um clique, descubra o especialista que melhor atende às suas preferências, adquira seus serviços, interaja e desfrute. Nossos profissionais criteriosos são submetidos a um processo rigoroso de avaliação antes de serem aceitos na plataforma, abrangendo desde sua trajetória educacional até sua integridade legal, tudo isso com o propósito de proporcionar uma experiência mais segura aos nossos clientes.
             </p>
-            <a href="/contrate" class="btn-learn-more">Cuidadoso</a>
+            <a href="/CuidadosoListing" class="btn-learn-more">Cuidadoso</a>
           </div>
         </div>
 
@@ -266,7 +266,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
               <h4><%=posts[index].Assunto %></h4>
               <p><%=posts[index].NomeCadastro %></p>
               <div class="container ">
-              <a href="/Perfil/<%=posts[index].IDCadastro %>" class="details-link" title="More Details"><i class="fas fa-user fa-1x"></i></a>
+              <a href="/ProfilePage/<%=posts[index].IDCadastro %>" class="details-link" title="More Details"><i class="fas fa-user fa-1x"></i></a>
             </div>
             </div>
           </div>
@@ -306,7 +306,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Como me torno um cuidadoso? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Facilitamos o processo de tornar-se um profissional Cuidadoso. Basta clicar <a href="/login">aqui</a> para enviar seus documentos e formações, e aguardar a análise de nossa plataforma
+                  Facilitamos o processo de tornar-se um profissional Cuidadoso. Basta clicar <a href="/Login">aqui</a> para enviar seus documentos e formações, e aguardar a análise de nossa plataforma
                 </p>
               </div>
             </li>
@@ -315,7 +315,7 @@ Profissionais ao alcance de um clique, descubra o especialista que melhor atende
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Como contratra um profissional Cuidadoso? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Contratar um profissional Cuidadoso é um procedimento simples. Clique <a href="/contrate">aqui</a> ou acesse nossa plataforma, vá até a seção de contratações, escolha o especialista que mais se alinha às suas preferências e efetue a contratação                </p>
+                  Contratar um profissional Cuidadoso é um procedimento simples. Clique <a href="/CuidadosoListing">aqui</a> ou acesse nossa plataforma, vá até a seção de contratações, escolha o especialista que mais se alinha às suas preferências e efetue a contratação                </p>
               </div>
             </li>
 
