--- a/views/LoginPage.ejs
+++ b/views/LoginPage.ejs
@@ -30,7 +30,7 @@
 
                 <div class="col-lg-9 mt-5 mt-lg-0 d-flex align-items-stretch">
 
-                  <form action="/validarlogin" method="post" role="form" class="php-email-form">
+                  <form action="/LoginValidate" method="post" role="form" class="php-email-form">
                     <div style="text-align: center;" class="container">
                       <div class="section-title">
                         <h2>Login</h2>
@@ -106,7 +106,7 @@
 
                 <div class="section-title">
                   <h2>Cadastro Profissional</h2>
-                  <form action="/login">
+                  <form action="/Login">
                     <div class="text-center"><button class="btn btn-outline-primary  " type="submit">Login</button></div>
                   </form>
                 </div>
@@ -124,7 +124,7 @@
                       <div class="row">
                         <br><br>
 
-                        <form action="/cadastrocuidadoso" method="post" >
+                        <form action="/CuidadosoRegister" method="post" >
 
 
                           
@@ -279,12 +279,12 @@
 
                 <div class="section-title">
                   <h2>Cadastro Pessoal</h2>
-                  <form action="/login">
+                  <form action="/Login">
                     <div class="text-center"><button class="btn btn-outline-primary  " type="submit">Login</button></div>
                   </form>
                 </div>
 
-                <form action="/cadastrocuidadoso" method="post">
+                <form action="/CuidadosoRegister" method="post">
                 <div class="container ">
                   <div class="php-email-form">
                     <div class="row">
