--- a/views/MyCareRequestsPage.ejs
+++ b/views/MyCareRequestsPage.ejs
@@ -52,7 +52,7 @@
           <div style="margin-top: 2%;" class="col-xl-4 col-md-8 d-flex align-items-stretch perfis" data-aos="zoom-in" data-aos-delay="100">
 
             
-            <a style="color: inherit;" href="/Servico/<%=minhassolicitacoes[x].id %>"> <div class="icon-box col-lg-10 justify-content-center sol">
+            <a style="color: inherit;" href="/Service/<%=minhassolicitacoes[x].id %>"> <div class="icon-box col-lg-10 justify-content-center sol">
              
 
               <% if(logado == minhassolicitacoes[x].IDSolicitante){ %>
