--- a/views/ServiceDetailsPage.ejs
+++ b/views/ServiceDetailsPage.ejs
@@ -104,7 +104,7 @@
       <% if(financeiro){ %>
         <% if(servico.id != financeiro.IDSolicitacao){ %> 
         <hr><br><br>
-          <h4  style="text-align: center; color: #3C4C69;" style="text-align: center;">Você tem pendencias financeiras, <a href="/servico/<%=financeiro.IDSolicitacao%>">Veja aqui</a></h4><br>
+          <h4  style="text-align: center; color: #3C4C69;" style="text-align: center;">Você tem pendencias financeiras, <a href="/Service/<%=financeiro.IDSolicitacao%>">Veja aqui</a></h4><br>
           <h5 style="text-align: center;">Você não pode aceitar esta solicitação</h5>
 
         
@@ -115,7 +115,7 @@
     
     
       <div class="d-flex justify-content-center">
-        <form action="/pagamento/<%=servico.id%>" method="get">
+        <form action="/Pay/<%=servico.id%>" method="get">
         <button type="submit" class="btn btn-primary btn-lg rounded-5  ">
           <i class="fas fa-dollar-sign"></i> Pagar
         </button>
@@ -127,7 +127,7 @@
          <% }else{ %> <!--esse else e do if financeiro -->
 
           <div style="margin-top: 3%;" class="d-flex justify-content-center">
-            <form action="/aceitarsolicitacao" method="POST">
+            <form action="/AcceptRequest" method="POST">
     
               <input type="hidden" name="idsolicitacao" value="<%=servico.id %>">
               <input type="hidden" name="idcuidadoso" value="<%=servico.IDCuidadoso %>">
@@ -139,7 +139,7 @@
     
             <input style="width: 5px;opacity: 0;" type="email">
     
-            <form action="/negarsolicitacao" method="POST">
+            <form action="/DenyRequest" method="POST">
               <input type="hidden" name="idsolicitacao" value="<%=servico.id %>">
               <input type="hidden" name="idcuidadoso" value="<%=servico.IDCuidadoso %>">
     
@@ -176,7 +176,7 @@
       <h5 style="text-align: center; margin-top: 5%;">Pagamento Pendente</h5>
       <h4  style="text-align: center; color: #209dd8;" style="text-align: center;">R$ <%= (servico.Valor * 0.1).toFixed(2) %></h4>
 
-      <form action="/pagamento/<%=servico.id%>" method="get">
+      <form action="/Pay/<%=servico.id%>" method="get">
   <div class="d-flex justify-content-center">
     <button type="submit" class="btn btn-primary btn-lg rounded-5  ">
       <i class="fas fa-dollar-sign"></i> Pagar
@@ -265,7 +265,7 @@
 
 
 <div  class="container justify-content-center ">
-<form action="/EnviarMensagem" method="post">
+<form action="/SendMessage" method="post">
   <div class="row">
 <div style="justify-content: end;" class="col col-lg-9 ">
   <input style="margin-left: 20%;" name="Mensagem" type="text" class="form-control col-md-10 rounded-5 " required  placeholder ="Escreva sua mensagem">
