--- a/views/partials/admin.ejs
+++ b/views/partials/admin.ejs
@@ -9,7 +9,7 @@
           <div class="container">
 
             <ol>
-              <li><a href="/contrate">Cuidadosos</a></li>
+              <li><a href="/CuidadosoListing">Cuidadosos</a></li>
               <li>Perfil Cuidadoso</li>
             </ol>
             <h2>
@@ -59,7 +59,7 @@
 
                     <div style="display: none;" class="container divft">
 
-                      <form action="/UploadFTPerfil" method="POST" enctype="multipart/form-data">
+                      <form action="/ChangeProfilePhoto" method="POST" enctype="multipart/form-data">
                         <br>
                         <h6>Selecione sua foto</h6>
                         <input style="width: 98%;" class="btn  btn-outline-secondary   " type="file" name="imagem"
@@ -101,7 +101,7 @@
                     <% if(cadastro.id !=userId){ %>
 
                       <% if(cadastro.TipoConta=='Cuidadoso') {%>
-                      <form action="/contratar">
+                      <form action="/HireProfessional">
                         <input type="hidden" name="cuidadoso" value="<%=cadastro.id %>">
                         <h1>R$<%=cadastro.Diaria%>,00  </h1>
                         <button type="submit" style="width: 50%;" class="btn btn-success">Contrate</button>
@@ -111,7 +111,7 @@
 
                         <% if(TipoConta == 'Administrador'){ %>
 
-                          <form action="/AprovarCuidador" method="post">
+                          <form action="/ApproveProfessional" method="post">
                             <h5 for="">Ao aprovar <%=userName %> será registrado como Administrador Responsavel</h5>
                             <br>
                             <input type="hidden" name="idcuidadoso" value="<%=cadastro.id %>">
@@ -172,7 +172,7 @@
                         <h4><%=aspirantes[index].Nome %></h4>
                         
                         <div class="container ">
-                        <a href="/Perfil/<%=aspirantes[index].id %>" class="details-link" title="Visualizar Perfil"><i class="bx bx-link"></i></a>
+                        <a href="/ProfilePage/<%=aspirantes[index].id %>" class="details-link" title="Visualizar Perfil"><i class="bx bx-link"></i></a>
                       </div>
                       </div>
                     </div>
@@ -203,7 +203,7 @@
         </div>
         
         <div style="display: none; background-color: #F3F5FA;" class="container divpubli ">
-          <form action="/uploadpost" method="POST" enctype="multipart/form-data">
+          <form action="/UploadPost" method="POST" enctype="multipart/form-data">
             <div style="text-align: center;" class="container">
               <div class="section-title"><br>
                 <h2>Novo Post</h2>
@@ -277,7 +277,7 @@
                         class="btn  ">        <i class="bi bi-gear text-white "></i> </button>
                     
 
-                    <form action="/deletarpubli" method="post"><input type="hidden" name="idperfi"
+                    <form action="/DeletePost" method="post"><input type="hidden" name="idperfi"
                       value="<%=cadastro.id %>"><input type="hidden" name="id" value="<%=posts[index].id %>"><button title="Deletar Publicação"
                       class="btn   "><i class="bi bi-trash text-white"></i></button></form>
                   </div>
@@ -291,7 +291,7 @@
                       <div  class="form-group col-lg-12 editarpost">
                         <br>
                         <h6 style="color: white;" for="name">Nova Legenda</h6>
-                        <form action="/updatepost" method="post">
+                        <form action="/UpdatePost" method="post">
                           <input type="hidden" name="idpost" value="<%=posts[index].id %>">
                           <input style="width: 180%;" type="hidden" name="idperfil" value="<%=cadastro.id %>">
                           <input type="text" class="form-control" name="novoassunto" id="email" required><br>
