This commit is for security from Cuidadoso

--- a/views/ProfilePage.ejs
+++ b/views/ProfilePage.ejs
@@ -363,7 +363,7 @@
                 <h2>Publicações</h2> 
                 <% if(cadastro.id==userId){ %>
                   <button onclick="divpubli()" class="btn btn-outline-secondary   ">
-                    Nova Publicação
+                   + Nova Publicação
                   </button>
       
                   <% } %>
