--- a/views/LoginPage.ejs
+++ b/views/LoginPage.ejs
@@ -63,7 +63,7 @@
               <div class="col-lg-2 d-flex align-items-stretch">
                 <div class="col-lg-20 mt-5 mt-lg-0 d-flex align-items-stretch">
 
-                  <form action="/CadastroValor" method="get" role="form" class="php-email-form">
+                  <form action="/UndefinedRouteA" method="get" role="form" class="php-email-form">
                     <div style="text-align: center;" class="container">
                       <div class="section-title">
                         <h2>Cadastro</h2>
@@ -79,7 +79,7 @@
                   </form>
 
                   <br>
-                  <form action="/CadastroValor1">
+                  <form action="/UndefinedRouteB">
                   <div class="text-center"><button type="submit">Pessoal</button></div><br>
                 </form>
 
